--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,20 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <script>
+    var FACEBOOK_APP_ID = "442830907030653";
+    window.fbAsyncInit = function () {
+      FB.init({
+        appId: FACEBOOK_APP_ID,
+        cookie: true,
+        xfbml: true,
+        version: "v9.0",
+      });
+      FB.AppEvents.logPageView();
+    };
+  </script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js" ></script>
+  <script src="flutter_facebook_auth.js" type="application/javascript" ></script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
