--- a/web/index.html
+++ b/web/index.html
@@ -44,6 +44,29 @@
   </script>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js" ></script>
   <script src="flutter_facebook_auth.js" type="application/javascript" ></script>
+
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyDhbtBHnIvzMo2ZDJ7UZIeqAALdE9Z7m_8",
+      authDomain: "libertime-5fe0f.firebaseapp.com",
+      databaseURL: "https://libertime-5fe0f.firebaseio.com",
+      projectId: "libertime-5fe0f",
+      storageBucket: "libertime-5fe0f.appspot.com",
+      messagingSenderId: "454129904902",
+      appId: "1:454129904902:web:964f5b0f12dd96f5b5c287",
+      measurementId: "G-CEGNJ8MGFK"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
