--- a/web/index.html
+++ b/web/index.html
@@ -21,6 +21,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="libertime_app">
+  <meta name="google-signin-client_id" content="1080688578544-d647jbd63l5k8a4g102g1fpjln682upk.apps.googleusercontent.com">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
@@ -77,6 +78,7 @@
       });
     }
   </script>
+  <script defer src="sql-wasm.js"></script>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
